# mbmh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CHECKS.md
src/mbmh/: __init__.py  cli.py  config.py  models.py
src/mbmh/backend/: __init__.py  _http.py  github.py  gitlab.py  jira.py  local.py  protocol.py
src/mbmh/git_ops/: __init__.py  commits.py
src/mbmh/report/: __init__.py  markdown.py
src/mbmh/validator/: __init__.py  core.py  epics.py
tests/: conftest.py  test_backend_github.py  test_backend_gitlab.py  test_backend_gitlab_live.py  test_backend_jira.py  test_backend_local.py  test_cli.py  test_epic_linking.py  test_epic_resolver.py  test_git_ops.py  test_report.py  test_reverts.py  test_ticket_extraction.py  test_ticket_structure.py  test_two_point.py  test_validator_core.py
